--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title></title>
+    <title>3D Slider</title>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="slider">
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1561787741-8c38266fa0de?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1598484033793-fb6a544f4ba2?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTZ8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1575989894983-f3b699e1d931?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mjh8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1601155472278-5fba1045658f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzR8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1601400307763-f459c4e8ca8b?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDJ8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1595687589323-d9f604cbb6bb?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NTF8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1589707998846-637b878b16c2?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NTZ8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1580529448877-13beb10fc6ca?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NjF8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1574618964319-730fb80a2d76?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NjR8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1572196557554-9f7624fd4f56?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NzF8fG5hdHVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
     <!-- Custom scripts, edit above this line -->
     <script src="scripts/index.js"></script>
   </body>
